avoid scrollbar shifting

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,28 @@
 	--default-font-family: "Averia Libre", monospace;
 }
 
+html {
+	scrollbar-gutter: stable;
+}
+
+html::-webkit-scrollbar-track {
+	background: white;
+}
+
+html::-webkit-scrollbar-thumb {
+	background: #888;
+	border-radius: 4px;
+}
+
+html::-webkit-scrollbar-thumb:hover {
+	background: #555;
+}
+
+/* For Firefox */
+html {
+	scrollbar-color: #888 white;
+}
+
 @media print {
 	html {
 		font-size: 12px;
@@ -13,19 +35,19 @@
 
 @keyframes slideOutToTopRight {
 	from {
-		transform: translate(0, 0);
+		transform: translateY(0);
 	}
 	to {
-		transform: translate(100%, -100%);
+		transform: translateY(-100%);
 	}
 }
 
 @keyframes slideInFromTopRight {
 	from {
-		transform: translate(100%, -100%);
+		transform: translateY(-100%);
 	}
 	to {
-		transform: translate(0, 0);
+		transform: translateY(0);
 	}
 }
 
